--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Avestan&family=Poppins:wght@600&family=Quicksand:wght@300;400;500&family=Roboto&display=swap');
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,7 +9,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: black;
 }
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
@@ -20,4 +26,62 @@ code {
     width: 450px;
     margin: 0 auto;
     margin-top: 40px;
+}
+
+  
+h2{
+  color:aqua;
+  text-align: center;
+  font-size: 5rem;
+  margin:0 0  2em;
+  font-family: 'Stylish' , sans-serif;
+}
+
+.container{
+  /*background-color: rgb(253,253,255);*/
+  max-width: 1300px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+.box{
+  
+  width:28%;
+  margin:10px;
+  padding:20px;
+  box-shadow: 2px 2px 10px white;
+}
+h5{
+  color:#fff;
+  font-family: 'Stylish' , sans-serif;
+  text-align: center;
+}
+
+p{
+  color:palegreen;
+  font-size: 9 rem;
+}
+img{
+  width:300px;
+  height:300px;
+  object-fit: contain;
+}
+.login{
+  width:100%;
+  min-height: 80vh;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: white;
+}
+.login-input{
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+}
+small{
+  color:red;
 }
