--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,159 @@
-.App {
-  text-align: center;
+
+.cardWrapper{
+  width: 590px;
+   margin: 28px -85px;
+} 
+.userImg{
+ width:180px;
+  height:180px;
+}
+.css-ux0k4c-MuiPaper-root-MuiCard-root{
+  background-color:#ffffff ;
+}
+.css-et1ao3-MuiTypography-root{
+color :rgb(5, 5, 5);
+cursor: pointer;
+direction: ltr;
+display :inline;
+font-family: system-ui, -apple-system, "system-ui", ".SFNSText-Regular", sans-serif;
+font-size: 15px;
+font-weight: 600;
+height: auto;
+line-height: 19.9995px;
+list-style-image: none;
+list-style-position: outside;
+list-style-type: none;
+text-align: left;
+width: auto;
+word-break: break-word;
+-webkit-font-smoothing: antialiased;
+-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.css-83ijpv-MuiTypography-root{
+color: rgb(101, 103, 107);
+cursor: pointer;
+direction: ltr;
+display: block;
+font-family: system-ui, -apple-system, "system-ui", ".SFNSText-Regular", sans-serif;
+font-size: 13px;
+font-weight:400;
+height: 16px;
+line-height: 16.0004px;
+
+}
+.css-r40f8v-MuiTypography-root{
+color :rgb(5, 5, 5);
+cursor :auto;
+direction: ltr;
+display: block;
+font-family: "system-ui, -apple-system, system-ui, SFNSText-Regular, sans-serif";
+font-size: 15px;
+font-weight:400;
+
+line-height: 19.9995px;
+}
+.commentName{
+  color: rgb(5, 5, 5);
+cursor: pointer;
+display: block;
+font-family: system-ui, -apple-system, "system-ui", ".SFNSText-Regular", sans-serif;
+font-size: 13px;
+font-weight: 600;
+line-height:16.0004px;
+max-width: 100%;
+min-width: 0px;
+
+text-align: start;
+margin-bottom: 3px;
+}
+.profileName{
+  font-family: system-ui, -apple-system, "system-ui", ".SFNSText-Regular", sans-serif;
+font-size: 20px;
+font-weight: 700;
+height: 24px;
+line-height: 24px;
+overflow-x: hidden;
+overflow-y: hidden;
+padding: 15px;
+}
+.commentBody{
+  text-align: left;
+  width: 450px;
+  display: block;
+}
+.post-top input {
+  background: #f0f2f5;
+  border-radius: 30px;
+  border: 0;
+  font-size: 17px;
+  margin: 15px 0px 0px 15px;
+  padding: 10px 20px;
+  width: 390px;
+}
+/* .my-post{
+  padding: 8px 0px;
+} */
+.commentInput{
+  background: #f0f2f5;
+  border-radius: 30px;
+  border: 0;
+  font-size: 17px;
+  outline: none;
+  padding: 10px;
+  width: 82%;
+  height: 25px;
+  margin: 15px -20px;
+ 
+}
+.load-image{
+  margin-left:15px
+}
+.commentBtn{
+  float: right;
+   margin: 20px 0px 0px 10px;
+   border: none;
+   position: relative;
+   right: 10px;
+}
+.css-12u555e-MuiImageListItem-root {
+ 
+
+  height: 150px;
+}
+.modal4{
+  width: 350px;
+  height: 200px;
+  background-color: white;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.modalDiv {
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  background-color: rgba(91, 112, 131, 0.4);
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+/* .modal {
+  width: 350px;
+  height: 200px;
+  background-color: white;
+  border-radius: 5px;
+} */
+/* .MuiCheckbox-colorPrimary.Mui-checked {
+  color: #e82997 !important;
+  position: relative;
+  } */
+  .css-6hp17o-MuiList-root-MuiMenu-list {
+     list-style: none;
+     margin: 0;
+     height: 75px;
+     /* padding: 0; */
+     position: relative;
+     /* padding-top: 8px; */
+     /* padding-bottom: 8px; */
+     outline: 0;
+ }
